--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div di="content">
         <ul>
             <li> <a href="./dataStructure.html">Data Structures and Algorithms</a></li>
+            <li> <a href="./linuxTotorial.html">Linux Totorial</a></li>
         </ul>
     </div>
        
