--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li>
                     <p><a href="./aboutUs.html">About Us</a> </p>
                 </li>
+                
             </ul>
         </nav>
     </header>
@@ -28,6 +29,10 @@
         <div di="content">
         <ul>
             <li> <a href="./dataStructure.html">Data Structures and Algorithms</a></li>
+            <li> <a href="./linuxTotorial.html">Linux Totorial</a></li>
+            <li> <a href="./classesandmemory.html">Classes And memory Management</a></li>
+            <li> <a href="./linuxTotorial.html">Linux Totorial</a></li>
+            <li> <a href="./linuxTotorial.html">Linux Totorial</a></li>
             <li> <a href="./linuxTotorial.html">Linux Totorial</a></li>
         </ul>
     </div>
