--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li> <a href="./classesandmemory.html">Classes And memory Management</a></li>
             <li> <a href="./linuxTotorial.html">Linux Totorial</a></li>
             <li> <a href="./linuxTotorial.html">Linux Totorial</a></li>
-            <li> <a href="./linuxTotorial.html">Linux Totorial</a></li>
+            <li> <a href="./ linkedlists.html">Linked List</a></li>
         </ul>
     </div>
        
