--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li> <a href="./linuxTotorial.html">Linux Totorial</a></li>
             <li> <a href="./classesandmemory.html">Classes And memory Management</a></li>
             <li> <a href="./abestract.html">Abestract</a></li>
-            <li> <a href="./linuxTotorial.html">Linux Totorial</a></li>
+            <li> <a href="./read.html">Read from file</a></li>
             <li> <a href="./ linkedlists.html">Linked List</a></li>
         </ul>
     </div>
